public/css/style.css
*{
  font-family: 'Roboto', sans-serif;
}

.container {
  display: flex;
  justify-content: space-between;
}

.row {
  flex-direction: column;
  background-color: gainsboro;
}


.column {
  float: left;
  height: 600px;
  width: 30%;
  padding: 0 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
  padding: 16px;
  text-align: center;
  background-color: #f1f1f1;
  border: none;
}

.footerul li {
  list-style-type: none;
  display: inline;
  cursor:pointer;
}

.userName {
  color: goldenrod;
  font-weight: bolder;
  text-align: center;
}

#latLong {
 color: goldenrod;
 text-align: center;
 padding-top: 25px;
}

.border {
  flex-wrap: wrap;
  width: 115%;
  height: 200px;
  background-color: black;
  padding-top: 25px;
}

footer {
  width: 100%;
}

.userInGroup {
  flex-wrap: wrap;
}


/* @media only screen and (max-width: 710px) {
  .border {
    flex-wrap: wrap;
  }
} */




























/* Hallie's space */







































/* Jeff's space*/
































#map {
  height: 400px;
  /* The height is 400 pixels */
  width: 800px;
  /* The width is the width of the web page */
}

.topnav {
  background-color: grey;
  text-align: end;
  word-spacing: 5px;
  height: 50px;
  font-size: 25px;
}

